--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,9 +14,10 @@ jobs:
       - uses: actions/checkout@v3
       - run: git checkout -b gh-pages
       - run: pip3 install -r requirements.txt
-      - run: python3 main.py
+      - run: python3 generate_json.py
         env:
           GITHUB_TOKEN: ${{ secrets.API_TOKEN_GITHUB }}
+      - run: python3 generate_site_from_json.py
       - run: 'echo "droidtoberfest.sylviavanos.nl" > docs/CNAME'
       - run: git config user.name github-actions
       - run: git config user.email github-actions@github.com
